# imdb-kg

./: .gitignore  README.md  pyproject.toml
docs/: 100-queries.md
etl/: loader.py
mcp_server/: __init__.py  config.yaml  server.py
scripts/: run_queries.py  verify_queries.py
tests/: test_loader.py  test_mcp_server.py
