[project]
name = "imdb-kg"
version = "0.1.0"
description = "IMDB Movies Knowledge Graph — movies, series, persons, genres and ratings from IMDB non-commercial datasets in Samyama graph database"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
    {name = "Madhulatha Mandarapu", email = "madhulatha@samyama.ai"},
    {name = "Sandeep Kunkunuru", email = "sandeep@samyama.ai"},
]
keywords = ["knowledge-graph", "imdb", "movies", "graph-database", "samyama"]

dependencies = [
    "samyama>=0.6.0",
    "sentence-transformers>=2.2.0",
    "numpy>=1.24",
    "rich>=13.0",
    "click>=8.0",
    "fastmcp>=0.1.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.1.0"]

[tool.setuptools.packages.find]
include = ["etl*", "mcp_server*"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
